added logout and auto login after sign up

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,9 +2,10 @@
   .navbar-inner
     .login-links
       - if !current_user
-        = link_to "Sign Up", new_user_path
-        = link_to "Login", new_session_path
+        = link_to "Sign Up", signup_path
+        = link_to "Login", login_path
       - else
+        = link_to "Log Out", logout_path
         = link_to "View Account", "#"
     = link_to "Rails Sandbox", root_path, { :class => 'brand' }
     .clear-div
