--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -43,6 +43,7 @@ body{
         margin-right: .75em;
         margin-top: .5em;
         margin-bottom: .5em;
+        text-decoration: underline;
       }
     }
     .brand{
